--- a/home.html
+++ b/home.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Capivarinha Dev's</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <header>
+        <div>
+            <h1>Capivarinha Dev's</h1>
+            <p>Criando experiencias</p>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#home">Inicio</a></li>
+                <li><a href="#about">Sobre</a></li>
+                <li><a href="#games">Jogos</a></li>
+                <li><a href="#contact">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="about">
+        <h2>Sobre nós</h2>
+        <p>Somos um studio indie com o objetivo de criar experiencias marcantes.</p>
+
+    </section>
+    <section id="games" class="games">
+        <h2>Nossos Jogos</h2>
+        <div class="games-grid">
+            <div class="game">
+                <h3>Game 1</h3>
+                <img src="img/" alt="Jogo 1">
+                <p>Descrição do jogo 1</p>
+            </div>
+            <div class="game">
+                <h3>Game 2</h3>
+                <img src="img/" alt="Jogo 2">
+                <p>Descrição do jogo 2</p>
+            </div>
+            <div class="game">
+                <h3>Game 3</h3>
+                <img src="img/" alt="Jogo 3">
+                <p>Descrição do jogo 3</p>
+            </div>
+        </div>
+
+    </section>
+    <section id="contact">
+        <h2>Contato</h2>
+        <form>
+            <input type="text" placeholder="Seu Nome" required>
+            <input type="email" placeholder="Seu E-mail" required>
+            <textarea placeholder="Deixe sua Mensagem" rows="5" required></textarea>
+            <button></button>
+        </form>
+
+    </section>
+    <footer>
+        <p>&copy; Capivarinha Dev's. Todos os Direitos reservados</p>
+        <p>Siga-nos em nossas redes sociais: <a href="#">Instagram</a> <a href="#">LinkeIn</a></p>
+    </footer>
 </body>
 </html>
