--- a/home.html
+++ b/home.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
+    <header id="home">
         <div>
+            <img src="" alt="Logo capivarinha">
             <h1>Capivarinha Dev's</h1>
             <p>Criando experiencias</p>
         </div>
@@ -47,13 +48,13 @@
         </div>
 
     </section>
-    <section id="contact">
+    <section id="contact" class="contact">
         <h2>Contato</h2>
         <form>
             <input type="text" placeholder="Seu Nome" required>
             <input type="email" placeholder="Seu E-mail" required>
             <textarea placeholder="Deixe sua Mensagem" rows="5" required></textarea>
-            <button></button>
+            <button>Enviar</button>
         </form>
 
     </section>
