--- a/home.html
+++ b/home.html
@@ -9,8 +9,7 @@
 <body>
     <header id="home">
         <div>
-            <img src="" alt="Logo capivarinha">
-            <h1>Capivarinha Dev's</h1>
+            <img src="./img/pixil-frame-0 (1).png" alt="Logo capivarinha">
             <p>Criando experiencias</p>
         </div>
         <nav>
