--- a/home.html
+++ b/home.html
@@ -9,12 +9,7 @@
 <body>
     <header id="home">
         <div>
-<<<<<<< Updated upstream
-            <img src="" alt="Logo capivarinha">
-            <h1>Capivarinha Dev's</h1>
-=======
             <img src="./img/logo.png" alt="Logo capivarinha">
->>>>>>> Stashed changes
             <p>Criando experiencias</p>
         </div>
         <nav>
@@ -58,7 +53,7 @@
             <input type="text" placeholder="Seu Nome" required>
             <input type="email" placeholder="Seu E-mail" required>
             <textarea placeholder="Deixe sua Mensagem" rows="5" required></textarea>
-            <button type="submit">Enviar</button>
+            <button>Enviar</button>
         </form>
 
     </section>
@@ -66,6 +61,6 @@
         <p>&copy; Capivarinha Dev's. Todos os Direitos reservados</p>
         <p>Siga-nos em nossas redes sociais: <a href="#">Instagram</a> <a href="#">LinkeIn</a></p>
     </footer>
+    <script src="./js/script.js"></script>
 </body>
-<script src="./js/script.js"></script>
 </html>
